--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,35 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.weather-details {
+  text-align: left;
+  color: #70757a;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 16px;
+  padding-left: 9px;
+  padding-top: 6px;
+  list-style-type: none;
+}
+
+.temp-unit {
+  display: inline-block;
+  padding-left: 10px;
+  vertical-align: top;
+}
+.temp {
+  color: #202124;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 42px;
+}
+
+.unit {
+  color: #202124;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 6px;
+  padding-left: 6px;
+  vertical-align: top;
+}
